# llrs

./: .gitignore  Cargo.toml
core/: NOTES.md
core/llrs-backend/: Cargo.toml
core/llrs-core/: Cargo.toml
core/llrs-core/src/: types.rs
core/llrs-kernels/: Cargo.toml
core/llrs-loader/: Cargo.toml
core/llrs-loader/src/: gguf.rs
core/llrs-runtime/: Cargo.toml
core/llrs-threads/: Cargo.toml
docs/: ARCH.md
format/llrs-bcctf/: Cargo.toml
format/llrs-bcctf/src/: lib.rs
format/llrs-ggml/: Cargo.toml
format/llrs-gguf/: Cargo.toml  build.rs  build_cuda.rs  ggml_stats.txt
format/llrs-gguf/src/: README.md  lib.rs  tensor.rs
format/llrs-gguf/src/__backup/: backend.rs  gguf.rs  tensor.rs
format/llrs-gguf/src/backend/cuda/kernels/: add.cu
format/llrs-gguf/src/backend/cuda/ops/: add.rs
format/llrs-gguf/tests/: op_tests.rs
format/llrs-onnx/: Cargo.toml
format/llrs-ppml/: Cargo.toml
format/llrs-safetensors/: Cargo.toml
loaders/llrs-loader/: Cargo.toml
research/llrs-algos/: Cargo.toml
research/llrs-experiments/: Cargo.toml
research/llrs-research-utils/: Cargo.toml
tools/llrs-bench/: Cargo.toml
tools/llrs-chat/: Cargo.toml
tools/llrs-cli/: Cargo.toml
tools/llrs-daemon/: Cargo.toml
