[workspace]
members = [
    "core/llrs-core",
    "core/llrs-kernels",
    "core/llrs-runtime",
    "core/llrs-backend",
    "core/llrs-loader",
    "core/llrs-threads",

    "loaders/llrs-ggml",
    "loaders/llrs-loader",

    # file formats
    "format/llrs-gguf",
    "format/llrs-onnx",
    "format/llrs-ppml",
    "format/llrs-bcctf",
    "format/llrs-safetensors",

    "research/llrs-algos",
    "research/llrs-experiments",
    "research/llrs-research-utils",

    "tools/llrs-bench",
    "tools/llrs-chat",
    "tools/llrs-cli",
    "tools/llrs-daemon",
]
resolver = "3"


[workspace.package]
version = "0.0.1"
authors = ["Ervin Bosenbacher <ervin.bosenbacher@thirdrule.io>"]
edition = "2024"
homepage = "https://www.thirdrule.io/"
license = "MIT"
repository = "https://github.com/thirdrule-io/llama.rs"

[workspace.dependencies]
clap = { version = "4.5.37", features = ["derive"] }
anyhow = "1.0.98"
log = "0.4.27"
env_logger = "0.11.8"
tokio = { version = "1.44.2", features = ["full"] }
tracing-subscriber = "0.3.19"

[profile.mindebug-dev]
inherits = "dev"

[profile.release]
lto = "thin"

[profile.nodebug-release]
inherits = "release"
debug = false

[profile.debug-release]
inherits = "release"
debug = true

[profile.dist-release]
https://stackoverflow.com/questions/72098296/how-to-create-a-left-packed-vector-of-indices-of-the-0s-in-one-simd-vectorinherits = "release"
codegen-units = 1
debug = false
lto = "fat"
