[package]
name = "llrs-gguf"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
build = "build.rs"
links = "llrs_gguf"

[lib]
crate-type = ["rlib"]

[features]
default = []
cuda = []

[dependencies]
libc = "0.2.172"
tracing-subscriber = { workspace = true }

[build-dependencies]
cc = "1.2.19"
